--- a/FICC/FRA.ipynb
+++ b/FICC/FRA.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,52 @@
     "        self.npv = self.PRICING(self.curve)\n",
     "        self.delta = self.DELTA()\n",
     "        self.theta = self.THETA()\n",
-    "    "
+    "    def CURVE(self, date):\n",
+    "        return SWAP_CURVE(date, GET_QUOTE(date)) \n",
+    "    def PRICING(self, curve):\n",
+    "        # Yield Term-structure\n",
+    "        curve_handle = ql.YieldTermStructureHandle(curve)\n",
+    "    \n",
+    "        # Floating rate\n",
+    "        libor = ql.USDLibor(ql.Period(3, ql.Months), curve_handle)\n",
+    "    \n",
+    "        # Pricing FRA\n",
+    "        fra = ql.ForwardRateAgreement(self.value_date,\n",
+    "                                     self.maturity_date,\n",
+    "                                     self.position,\n",
+    "                                     self.fra_rate,\n",
+    "                                     self.notional,\n",
+    "                                     libor,\n",
+    "                                     curve_handle)\n",
+    "        # FRA price\n",
+    "        npv = fra.NPV()\n",
+    "    \n",
+    "        return npv\n",
+    "    def DELTA(self):\n",
+    "        curve_handle = ql.YieldTermStructureHandle(self.curve)\n",
+    "    \n",
+    "        # 1bp\n",
+    "        basis_point = 0.0001\n",
+    "    \n",
+    "        # FRA price when 1bp up\n",
+    "        up_curve = ql.ZeroSpreadedTermStructure(curve_handle, ql.QuoteHandle(ql.SimpleQuote(basis_point)))\n",
+    "        #up_curve_handle = ql.YieldTermStructureHandle(up_curve)\n",
+    "        up_fra = self.PRICING(up_curve)\n",
+    "    \n",
+    "        # FRA price when 1bp down\n",
+    "        down_curve = ql.ZeroSpreadedTermStructure(curve_handle, ql.QuoteHandle(ql.SimpleQuote(-basis_point)))\n",
+    "        #down_curve_handle = ql.YieldTermStructureHandle(down_curve)\n",
+    "        down_fra = self.PRICING(down_curve)\n",
+    "    \n",
+    "        # DV01\n",
+    "        dv01 = (up_fra - down_fra) / 2\n",
+    "    \n",
+    "        return dv01\n",
+    "    def THETA(self):\n",
+    "        price_t0 = self.PRICING(self.CURVE(self.date))\n",
+    "        price_t1 = self.PRICING(self.CURVE(self.date + datetime.timedelta(days=1)))\n",
+    "    \n",
+    "        return price_t1 - price_t0"
    ]
   },
   {
@@ -87,43 +132,6 @@
    "metadata": {},
    "source": [
     "curve = 기존의 스왑 커브 모듈을 재활용하여 클래스 내부에서 스왑 커브를 만들어주는 역할"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CURVE(self, date):\n",
-    "    return SWAP_CURVE(date, GET_QUOTE(date))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def PRICING(self, curve):\n",
-    "    # Yield Term-structure\n",
-    "    curve_handle = ql.YieldTermStructureHandle(curve)\n",
-    "    \n",
-    "    # Floating rate\n",
-    "    libor = ql.USDLibor(ql.Period(3, ql.Months), curve_handle)\n",
-    "    \n",
-    "    # Pricing FRA\n",
-    "    fra = ql.ForwardRateAgreement(self.value_date,\n",
-    "                                 self.maturity_date,\n",
-    "                                 self.position,\n",
-    "                                 self.fra_rate,\n",
-    "                                 self.notional,\n",
-    "                                 libor,\n",
-    "                                 curve_handle)\n",
-    "    # FRA price\n",
-    "    npv = fra.NPV()\n",
-    "    \n",
-    "    return npv"
    ]
   },
   {
@@ -135,54 +143,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def DELTA(self):\n",
-    "    curve_handle = ql.YieldTermStructureHandle(self.curve)\n",
-    "    \n",
-    "    # 1bp\n",
-    "    basis_point = 0.0001\n",
-    "    \n",
-    "    # FRA price when 1bp up\n",
-    "    up_curve = ql.ZeroSpreadedTermStructure(curve_handle, ql.QuoteHandle(ql.SimpleQuote(basis_point)))\n",
-    "    #up_curve_handle = ql.YieldTermStructureHandle(up_curve)\n",
-    "    up_fra = self.PRICING(up_curve)\n",
-    "    \n",
-    "    # FRA price when 1bp down\n",
-    "    down_curve = ql.ZeroSpreadedTermStructure(curve_handle, ql.QuoteHandle(ql.SimpleQuote(-basis_point)))\n",
-    "    #down_curve_handle = ql.YieldTermStructureHandle(down_curve)\n",
-    "    down_fra = self.PRICING(down_curve)\n",
-    "    \n",
-    "    # DV01\n",
-    "    dv01 = (up_fra - down_fra) / 2\n",
-    "    \n",
-    "    return dv01"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 세타: 시간이 한 단위 변했을 때, 파생상품 가격이 얼마나 변하는가"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def THETA(self):\n",
-    "    price_t0 = self.PRICING(self.CURVE(self.date))\n",
-    "    price_t1 = self.PRICING(self.CURVE(self.date + datetime.timedelta(days=1)))\n",
-    "    \n",
-    "    return price_t1 - price_t0"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,19 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FRA' object has no attribute 'CURVE'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-40d1ded8b2df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# Build FRA object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     fra = FRA(todays_date,\n\u001b[0m\u001b[0;32m     15\u001b[0m              \u001b[0mvalue_date\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m              \u001b[0mmaturity_date\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-18-9dd14d046264>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, todays_date, value_date, maturity_date, position, fra_rate, notional)\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;31m# Initial Setup 1 : Date & Curve\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtodays_date\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurve\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCURVE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;31m# Initial Setup 2 : Instruments Info\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'FRA' object has no attribute 'CURVE'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price = 529.9903\n",
+      "Price = 249.8317\n",
+      "Price = -0.6453\n"
      ]
     }
    ],
