--- a/etc/sql_connect.ipynb
+++ b/etc/sql_connect.ipynb
@@ -73,6 +73,51 @@
     "ESCAPED BY '\\\\'\n",
     "LINES TERMINATED BY '\\n'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 데이터얻기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SQL = \"\"\"SELECT\n",
+    "    date,high,low,open,close,volume, adj_close\n",
+    "    FROM \"DATA\"\n",
+    "    WHERE date BETWEEN '2017-01-01' AND '2021-01-01'\n",
+    "    ORDER BY date\n",
+    "    LIMET 100;\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "conn = psycopg2.connect(database='name_of_your_databse')\n",
+    "the appropriate credentials\n",
+    "cursor = conn.cursor()\n",
+    "def query_ticks():\n",
+    "    cursor.execute(SQL)\n",
+    "    data = cursor.fetchall()\n",
+    "    return data"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
